--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,36 +6,157 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>299</width>
-    <height>490</height>
+    <width>241</width>
+    <height>325</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>241</width>
+    <height>325</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>-1</x>
-      <y>-11</y>
-      <width>301</width>
-      <height>451</height>
+      <x>0</x>
+      <y>240</y>
+      <width>241</width>
+      <height>31</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QListWidget" name="listWidget"/>
+      <widget class="QPushButton" name="rewindButton">
+       <property name="text">
+        <string>Rewind</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="playPauseButton">
+       <property name="text">
+        <string>Play</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="forwardButton">
+       <property name="text">
+        <string>Forward</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
+   <widget class="QScrollArea" name="scrollArea">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>241</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>239</width>
+       <height>239</height>
+      </rect>
+     </property>
+     <widget class="QTreeWidget" name="treeWidget">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>241</width>
+        <height>241</height>
+       </rect>
+      </property>
+      <property name="autoScroll">
+       <bool>true</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragEnabled">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropMode">
+       <enum>QAbstractItemView::NoDragDrop</enum>
+      </property>
+      <property name="headerHidden">
+       <bool>false</bool>
+      </property>
+      <column>
+       <property name="text">
+        <string>PlayList</string>
+       </property>
+      </column>
+      <item>
+       <property name="text">
+        <string>Video 1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 2</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 3</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 4</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 5</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 6</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Video 7</string>
+       </property>
+      </item>
+     </widget>
+    </widget>
+   </widget>
+   <zorder>horizontalLayoutWidget</zorder>
+   <zorder>scrollArea</zorder>
+   <zorder>rewindButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>299</width>
+     <width>241</width>
      <height>21</height>
     </rect>
    </property>
